chore: fixed footer z-index

--- a/css/work.css
+++ b/css/work.css
@@ -24,6 +24,7 @@
 html, body {margin: 0; height: 100%; overflow: hidden}
 
 .footer {
+    z-index: -1;
     position: absolute;
     bottom: 35%;
     width: 100%;
